--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@types/lodash": "^4.14.168",
     "@types/matter-js": "^0.14.12",
+    "jquery": "^3.6.0",
     "lodash": "^4.17.21",
     "matter-js": "^0.17.1",
     "pixi-keyboard": "^1.0.0",
@@ -14,6 +15,7 @@
   },
   "devDependencies": {
     "@types/html-webpack-plugin": "^3.2.5",
+    "@types/jquery": "^3.5.6",
     "@types/pixi.js": "^5.0.0",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
     "css-loader": "^5.2.4",
